# echo_lake

./: .gitignore  .ycm_extra_conf.py  Makefile  Makefile.am  README.md  actor.h  components.c  components.h  configure.ac  echo_lake  echo_lake.c  echo_lake.h  echo_lake.kdev4  echo_lake.tmx  entity.c  entity.h  game.c  game.h  graph.c  graph.h  leakout  motion.h  player.c  player.h  position.c  position.h  systems.c  systems.h  tags  texture.c  texture.h  tmx.c  tmx.h
.kdev4/: _custom.kdev4  echo_lake.kdev4
data/img/: ranger.ase
data/img/tiles/: fern.ase
data/maps/: cybernoid.json  echo_lake.json  level1.json
include/: actor.h  components.h  entity.h  entitymanager.h  game.h  macros.h  menustate.h  player.h  state.h  statemanager.h  systems.h  tmx.h  util.h  world.h
maps/: level1.json  level1.tmx
src/: Makefile  components.c  echo_lake.c  entity.c  entitymanager.c  game.c  menustate.c  player.c  statemanager.c  systems.c  tmx.c  world.c
