AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = echo_lake

echo_lake_SOURCES = src/components.c src/echo_lake.c src/entity.c src/entitymanager.c src/game.c src/menustate.c src/player.c src/statemanager.c src/systems.c src/tmx.c src/world.c
echo_lake_CFLAGS = -pedantic -g -std=c11 -fms-extensions -I./include/
